- Update KTabBar and KTabWidget to use the Qt "setSelectionBehaviorOnRemove" implementation   - Implements http://reviewboard.kde.org/r/1823/

BUG: 181124
BUG: 207747

svn path=/trunk/KDE/kdelibs/; revision=1048848