kdeui/widgets/ktabwidget.cpp
@@ -74,9 +74,6 @@ class KTabWidget::Private
     //know about is the shortened name
     QStringList m_tabNames;
 
-    // Used when tabCloseActivatePrevious is enabled
-    QList<QWidget*> m_previousTabList;
-
     bool isEmptyTabbarSpace( const QPoint & )  const;
     void resizeTabs( int changedTabIndex = -1 );
     void updateTab( int index );
@@ -122,7 +119,6 @@ void KTabWidget::Private::removeTab( int index )
   // prevent cascading resize slowness, not to mention crashes due to tab count()
   // and m_tabNames.count() being out of sync!
   m_resizeSuspend = ResizeDisabled;
-  m_previousTabList.removeOne( m_parent->widget( index ) );
 
   // Need to do this here, rather than in tabRemoved().  Calling
   // QTabWidget::removeTab() below may cause a relayout of the tab bar, which
@@ -130,15 +126,6 @@ void KTabWidget::Private::removeTab( int index )
   // that will use the m_tabNames[] list before it has been updated to reflect
   // the new tab arrangement.  See bug 190528.
   m_tabNames.removeAt( index );
-
-  // We need to get the widget for "activate previous" before calling to
-  // QTabWidget::removeTab() because that call changes currentIndex which calls
-  // to currentChanged() and thus modifies m_previousTabList.first(). And we
-  // store the widget and not the index of it because the index might be changed
-  // by the removeTab call.
-  QWidget *widget = 0;
-  if( !m_previousTabList.isEmpty() && m_parent->tabCloseActivatePrevious() )
-    widget = m_previousTabList.first();
 
   m_parent->QTabWidget::removeTab( index );
 
@@ -148,8 +135,6 @@ void KTabWidget::Private::removeTab( int index )
     resizeTabs();
   }
 
-  if( widget )
-    m_parent->setCurrentIndex( m_parent->indexOf( widget ) );
 }
 
 void KTabWidget::Private::resizeTabs( int changeTabIndex )
@@ -251,7 +236,6 @@ KTabWidget::KTabWidget( QWidget *parent, Qt::WFlags flags )
   connect(tabBar(), SIGNAL(receivedDropEvent( int, QDropEvent * )), SLOT(receivedDropEvent( int, QDropEvent * )));
   connect(tabBar(), SIGNAL(tabMoved( int, int )), SLOT(moveTab( int, int )));
   connect(tabBar(), SIGNAL(tabCloseRequested( int )), SLOT(closeRequest( int )));
-  connect(tabBar(), SIGNAL(currentChanged( int )), SLOT(currentChanged( int )));
 #ifndef QT_NO_WHEELEVENT
   connect(tabBar(), SIGNAL(wheelDelta( int )), SLOT(wheelDelta( int )));
 #endif
@@ -687,15 +671,13 @@ void KTabWidget::tabInserted( int idx )
 
 void KTabWidget::tabRemoved( int idx )
 {
+  Q_UNUSED(idx)
 // d->m_tabNames is now updated in KTabWidget::Private::removeTab()
 }
 
-void KTabWidget::currentChanged( int idx )
+/* This function is kept only for BC reasons, it is not useful anymore */
+void KTabWidget::currentChanged( int )
 {
-   // The tab should appear only once
-   d->m_previousTabList.removeOne( widget(idx) );
-
-   d->m_previousTabList.push_front( widget(idx) );
 }
 
 #include "ktabwidget.moc"
